# glados-tortoise-tts

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Taskfile.yml  pyproject.toml  requirements.txt
glados/: do_tts.py
glados/utils/: auto_tune.py
scripts/: tortoise_tts.py
tortoise/: api.py  do_tts.py  eval.py  get_conditioning_latents.py  read.py
tortoise/models/: arch_util.py  autoregressive.py  classifier.py  xtransformers.py
tortoise/utils/: audio.py  tokenizer.py  wav2vec_alignment.py
utils/: auto_tune.py
